<resources xmlns:tools="http://schemas.android.com/tools">
    <string name="app_name">Social <font color="#FF1B2251">Blogger</font></string>
    <string name="next">Next</string>
    <string name="title_ob_1">Dive into a world of engaging and popular blog posts. Explore topics that matter to you and stay updated with the latest trends.</string>
    <string name="title_ob_2">Connect with passionate individuals who share your interests. Follow your favorite bloggers and participate in lively discussions.</string>
    <string name="title_ob_3">Express yourself by creating and sharing your own blog posts. Your ideas and insights are valuable to our community.</string>
    <string name="title_ob_4">Get real-time notifications about new posts, comments, and interactions. Stay connected with your favorite content and conversations.</string>
    <string name="please_tell_me_who_you_are">Please tell me who you are</string>
    <string name="login">Login</string>
    <string name="example_email_gmail_dot_com">example_email@gmail.com</string>
    <string name="you_don_t_have_an_account">You don\'t have an account?</string>
    <string name="register_account">Register Account</string>
    <string name="or_login_with">Or Login With</string>
    <string name="password">password</string>
    <string name="register_an_account_to_continue">Register an account to continue!</string>
    <string name="register">Register</string>
    <string name="your_name_here">your_name_here</string>
    <string name="term_of_policy">Term of Policy</string>
    <string name="this_feature_will_be_released_soon">This feature will be released soon!</string>
    <string name="this_field_cannot_be_left_blank">This field cannot be left blank!</string>
    <string name="invalid_email">Invalid email!</string>
    <string name="password_minimum_six_characters">Password minimum 6 characters!</string>
    <string name="wait_a_moment" tools:ignore="TypographyEllipsis">Wait a moment...</string>
    <string name="accept">Accept</string>
    <string name="please_click_the_agree_button">Please click the agree button!</string>
    <string name="account_registration_successful">Account registration successful!</string>
    <string name="no_network_connection">No network connection!</string>
    <string name="account_not_found">Account Not Found!</string>
    <string name="add_a_comment">Add a comment…</string>
    <string name="recent_news">Recent news</string>
    <string name="create_new_post">Create New Post</string>
    <string name="private_text">Private</string>
    <string name="title_post">Title post</string>
    <string name="publish">Publish</string>
    <string name="what_are_you_thinking">What are you thinking?</string>
    <string name="public_text">Public</string>
    <string name="change_new_mode">Change New Mode</string>
    <string name="change_category_post">Change Category Post</string>
    <string name="please_allow_us_to_access_your_camera_and_take_picture">Please allow us to access your camera and take picture.</string>
    <string name="choose_image">Choose Image</string>
    <string name="message_denied_camera_permission">You need to grant camera permission to use this feature!</string>
    <string name="take_photo_again">Something went wrong, take photo again!</string>
    <string name="crop_image">Crop Image</string>
    <string name="upload_post_fail">Somethings went wrong! Please upload again!</string>
    <string name="upload_post_success">Posted, please check your profile!</string>
    <string name="view_all_comments">View all %d comments</string>
    <string name="send">Send</string>
    <string name="some_thing_went_wrong">Some thing went wrong</string>
    <string name="text_sample">Kể từ hôm nay - 01/09/2024, sự kiện HOT nhất trong quý 3 trên cộng đồng Viblo sẽ được khởi động để tìm ra những Trendsetters về Công nghệ mang tên Viblo Write &amp; Inspire Blogathon 2024. Tất cả những bài viết được publish trong tháng 9, đủ điều kiện xuất hiện trên Trending của Viblo sẽ là những bài viết được ghi nhận tham gia thành công sự kiện.\n\nCòn chần chừ gì nữa mà không bắt tay vào viết những bài viết chất lượng nhất để chia sẻ đến cộng đồng trong tháng 9 này. Đừng quên chia sẻ nó về trang cá nhân để bài viết có thể tiếp cận được nhiều độc giả nhất có thể nhé!\n\nThời gian diễn ra sự kiện\n\t*01/09/2024 - 30/09/2024\n\nCách thức tham gia</string>
    <string name="write_your_comment_here">Write your comment here</string>
    <string name="comments">Comments</string>
    <string name="views">views</string>
    <string name="one_view">1 view</string>
    <string name="likes">likes</string>
    <string name="like">%d Like</string>
    <string name="read_more">Read more</string>
    <string name="search_news_by_title">Search news by title...</string>
</resources>