<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>

    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/bg_dialog"
        android:padding="@dimen/_16sdp">

        <TextView
            android:id="@+id/textTitleChangeModeDialog"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="@font/font_semi_bold"
            android:text="@string/change_new_mode"
            android:textColor="#001262"
            android:textSize="@dimen/_18ssp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/iconClose" />

        <LinearLayout
            android:id="@+id/layoutPublic"
            android:layout_width="@dimen/_200sdp"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/_16sdp"
            android:gravity="center"
            android:orientation="horizontal"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/textTitleChangeModeDialog"
            tools:ignore="UseCompoundDrawables">

            <View
                android:layout_width="0dp"
                android:layout_height="1dp"
                android:layout_weight="1" />

            <ImageView
                android:id="@+id/radioModePublic"
                android:layout_width="@dimen/_24sdp"
                android:layout_height="@dimen/_24sdp"
                android:contentDescription="@string/app_name"
                android:padding="@dimen/_2sdp"
                android:src="@drawable/state_ic_radio"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/textTitleChangeModeDialog" />

            <TextView
                android:id="@+id/textPublic"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/_8sdp"
                android:layout_weight="2"
                android:fontFamily="@font/font_regular"
                android:text="@string/public_text"
                android:textColor="@color/text_dark"
                android:textSize="@dimen/_14ssp"
                app:layout_constraintBottom_toBottomOf="@id/radioModePublic"
                app:layout_constraintStart_toEndOf="@id/radioModePublic"
                app:layout_constraintTop_toTopOf="@id/radioModePublic" />

        </LinearLayout>

        <LinearLayout
            android:id="@+id/layoutPrivate"
            android:layout_width="@dimen/_200sdp"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/_8sdp"
            android:gravity="center"
            android:orientation="horizontal"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/layoutPublic"
            tools:ignore="UseCompoundDrawables">

            <View
                android:layout_width="0dp"
                android:layout_height="1dp"
                android:layout_weight="1" />

            <ImageView
                android:id="@+id/radioModePrivate"
                android:layout_width="@dimen/_24sdp"
                android:layout_height="@dimen/_24sdp"
                android:contentDescription="@string/app_name"
                android:padding="@dimen/_2sdp"
                android:src="@drawable/state_ic_radio"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/textTitleChangeModeDialog" />

            <TextView
                android:id="@+id/textPrivate"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/_8sdp"
                android:layout_weight="2"
                android:fontFamily="@font/font_regular"
                android:text="@string/private_text"
                android:textColor="@color/text_dark"
                android:textSize="@dimen/_14ssp"
                app:layout_constraintBottom_toBottomOf="@id/radioModePublic"
                app:layout_constraintStart_toEndOf="@id/radioModePublic"
                app:layout_constraintTop_toTopOf="@id/radioModePublic" />

        </LinearLayout>

        <ImageView
            android:id="@+id/iconClose"
            android:layout_width="@dimen/_24sdp"
            android:layout_height="@dimen/_24sdp"
            android:padding="@dimen/_2sdp"
            android:src="@drawable/ic_close"
            app:layout_constraintEnd_toEndOf="parent"
            android:contentDescription="@string/app_name"
            app:layout_constraintTop_toTopOf="parent" />

    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>